UI formatting fixes